example/lib/src/arbs/errors/app_lo.arb
{
  "@@locale": "lo",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "ມີບັດສະບັດ",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "ເກິດບັດທີ່ບໍ່ຄາດຄິດ",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Bug report sent successfully.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}